--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
-		<link rel="icon" href="/favicon.ico" />
-		<link rel="apple-touch-icon" href="/logo192.png" />
+		<link rel="icon" href="/logo.png" />
+		<link rel="apple-touch-icon" href="/logo.png" />
 		<link rel="manifest" href="/manifest.json" />
+		<script src="https://kit.fontawesome.com/d16614f244.js" crossorigin="anonymous"></script>
 		<title>React App with Vite</title>
 	</head>
 	<body>
