--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="apple-touch-icon" href="/logo.png" />
 		<link rel="manifest" href="/manifest.json" />
 		<script src="https://kit.fontawesome.com/d16614f244.js" crossorigin="anonymous"></script>
-		<title>React App with Vite</title>
+		<title>WizardCode</title>
 	</head>
 	<body>
 		<div id="root"></div>
