--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
+
+
+		<meta name="description" content="Développeur freelance spécialisé en création de sites web et applications. Services de développement front-end, back-end, et maintenance. Obtenez un site performant et adapté à vos besoins.">
+
+		<!-- Balise Meta Keywords -->
+		<meta name="keywords" content="développeur freelance, création de site web, application web, développement front-end, développement back-end, SEO, freelance web, développement application, Valenciennes">
+
+		<!-- Balise Meta Auteur -->
+		<meta name="author" content="Mairesse Maxence">
+
+		<!-- Balise Open Graph pour les réseaux sociaux -->
+		<meta property="og:title" content="Développeur Freelance - Sites Web & Applications | Mairesse Maxence">
+		<meta property="og:description" content="Besoin d'un site web performant ou d'une application sur-mesure ? Découvrez mes services de développeur freelance.">
+		<meta property="og:image" content="https://www.wizardcode.fr/logo.png">
+		<meta property="og:url" content="https://www.wizardcode.fr/">
+		<meta property="og:type" content="website">
+
+
+
 		<link rel="icon" href="/logo.png" />
 		<link rel="apple-touch-icon" href="/logo.png" />
 		<link rel="manifest" href="/manifest.json" />
