--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
 		<meta property="og:url" content="https://www.wizardcode.fr/">
 		<meta property="og:type" content="website">
 
-
+		<!-- Balise Twitter Card -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="Développeur Freelance - Sites Web & Applications | Mairesse Maxence">
+		<meta name="twitter:description" content="Services de développement web et applications. Obtenez un site adapté à vos besoins !">
+		<meta name="twitter:image" content="https://www.wizardcode.fr/logo.png">
 
 		<link rel="icon" href="/logo.png" />
 		<link rel="apple-touch-icon" href="/logo.png" />
