--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<meta name="twitter:title" content="Développeur Freelance - Sites Web & Applications | Mairesse Maxence">
 		<meta name="twitter:description" content="Services de développement web et applications. Obtenez un site adapté à vos besoins !">
 		<meta name="twitter:image" content="https://www.wizardcode.fr/logo.png">
+		<meta name="robots" content="index, follow">
 
 		<link rel="icon" href="/logo.png" />
 		<link rel="apple-touch-icon" href="/logo.png" />
