--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
-
+		<meta name="google-site-verification" content="MVzZ6BXPpBRhRPtU8fUmkDxGIAdzcDHfF0tBsa9mxKw" />
 
 		<meta name="description" content="Développeur freelance spécialisé en création de sites web et applications. Services de développement front-end, back-end, et maintenance. Obtenez un site performant et adapté à vos besoins.">
 
